#11 - hoangnin - Implement-chatbox-socket
Add search function and update feature, property entity